--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/ulaval_web_secu
+#spring.datasource.url=jdbc:mysql://localhost:3307/ulaval_web_secu
 
 #configuration Docker
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://mysql:3306/ulaval_web_secu
+spring.datasource.url=jdbc:mysql://mysql:3306/ulaval_web_secu
 spring.datasource.username=root
 spring.datasource.password=root
 
