--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,13 +1,25 @@
 #configuration
-#spring.datasource.url=jdbc:mysql://localhost:3307/ulaval_web_secu
+spring.datasource.url=jdbc:mysql://localhost:3307/ulaval_web_secu
 
 #configuration Docker
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql:3306/ulaval_web_secu
+#spring.datasource.url=jdbc:mysql://mysql:3306/ulaval_web_secu
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#HTTPS
+server.port=8443
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/keystore.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=password
+# The alias mapped to the certificate
+server.ssl.key-alias=baeldung
+server.ssl.enabled=true
 
 #Variables
 julien.app.jwtCookieName= jwt
