remove https from uri

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,14 +12,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #HTTPS
 server.port=8443
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/keystore.p12
+#server.ssl.key-store=classpath:keystore/ssl.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=password
+#server.ssl.key-store-password=password
 # The alias mapped to the certificate
-server.ssl.key-alias=baeldung
-server.ssl.enabled=true
+#server.ssl.key-alias=ssl
+#server.ssl.enabled=true
 
 #Variables
 julien.app.jwtCookieName= jwt
